# synap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  bootstrap.md  examples.md
src/engram/: __init__.py  _utils.py  bootstrap.py  consolidation.py  episodic.py  facade.py  graph.py  mcp_server.py  persistent_graph.py  procedural.py  protocols.py  semantic.py  tools.py  types.py
src/engram/backends/: __init__.py  kuzu.py  postgres.py  sqlite.py
src/synap/: __init__.py  bootstrap.py  cli.py  consolidation.py  episodic.py  facade.py  graph.py  mcp_server.py  persistent_graph.py  procedural.py  protocols.py  semantic.py  tools.py  types.py
src/synap/backends/: __init__.py  kuzu.py  postgres.py  sqlite.py
src/synap/contrib/: __init__.py  _providers.py  fastapi.py  models.py  sanic.py
tests/: conftest.py  test_bootstrap.py  test_contrib_fastapi.py  test_contrib_sanic.py  test_facade.py  test_graph.py  test_kuzu.py  test_persistent_graph.py  test_sqlite.py  test_subsystems.py  test_tools.py
