[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Cognitive memory architecture for LLM agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20.0"]
kuzu = ["kuzu>=0.8.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "kuzu>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
