[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-memory"
version = "0.1.0"
description = "Cognitive memory architecture for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/veeeceee/engram"
Repository = "https://github.com/veeeceee/engram"
Issues = "https://github.com/veeeceee/engram/issues"
Changelog = "https://github.com/veeeceee/engram/blob/main/CHANGELOG.md"

[project.optional-dependencies]
kuzu = ["kuzu>=0.8.0"]
postgres = ["asyncpg>=0.30.0"]
mcp = ["fastmcp>=2.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "kuzu>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
